--- a/tests/integration/targets/support_tunnel/tasks/main.yml
+++ b/tests/integration/targets/support_tunnel/tasks/main.yml
@@ -6,6 +6,7 @@
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
     code: 4422
+    code2: 4433
 
   block:
     - name: Cleanup
@@ -26,11 +27,11 @@
         that:
           - support_tunnel is changed
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == {{ code }}
+          - support_tunnel.record.code == code
           - support_tunnel.diff.before.open == false
           - not support_tunnel.diff.before.code
           - support_tunnel.diff.after.open == true
-          - support_tunnel.diff.after.code == {{ code }}
+          - support_tunnel.diff.after.code == code
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
@@ -38,7 +39,7 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == {{ code }}
+          - support_tunnel.record.code == code
     
     - name: Open support tunnel - idempotence
       scale_computing.hypercore.support_tunnel:
@@ -49,11 +50,11 @@
         that:
           - support_tunnel is not changed
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == {{ code }}
+          - support_tunnel.record.code == code
           - support_tunnel.diff.before.open == true
-          - support_tunnel.diff.before.code == {{ code }}
+          - support_tunnel.diff.before.code == code
           - support_tunnel.diff.after.open == true
-          - support_tunnel.diff.after.code == {{ code }}
+          - support_tunnel.diff.after.code == code
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
@@ -61,7 +62,22 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == {{ code }}
+          - support_tunnel.record.code == code
+    
+    - name: Open support tunnel with different code
+      scale_computing.hypercore.support_tunnel:
+        state: present
+        code: "{{ code2 }}"
+      register: support_tunnel
+    - ansible.builtin.assert:
+        that:
+          - support_tunnel is changed
+          - support_tunnel.record.open == true
+          - support_tunnel.record.code == code2
+          - support_tunnel.diff.before.open == true
+          - support_tunnel.diff.before.code == code
+          - support_tunnel.diff.after.open == true
+          - support_tunnel.diff.after.code == code2
 
     - name: Close support tunnel
       scale_computing.hypercore.support_tunnel:
@@ -73,7 +89,7 @@
           - support_tunnel.record.open == false
           - not support_tunnel.record.code
           - support_tunnel.diff.before.open == true
-          - support_tunnel.diff.before.code == {{ code }}
+          - support_tunnel.diff.before.code == code2
           - support_tunnel.diff.after.open == false
           - not support_tunnel.diff.after.code
     
