Updated integration tests

--- a/tests/integration/targets/version_update/tasks/main.yml
+++ b/tests/integration/targets/version_update/tasks/main.yml
@@ -5,13 +5,13 @@
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
-    cluster_update_config: "{{ sc_config[sc_host].cluster_update }}"
+    cluster_update_config: "{{ sc_config[sc_host].version_update }}"
 
   block:
     - name: Fail test early if update is not allowed
       ansible.builtin.assert:
         that:
-          - cluster_update_config.magic_allow_string == "allow-cluster-update-test"
+          - cluster_update_config.magic_allow_string == "allow-version-update-test"
     
     - name: Get list of hc version updates
       scale_computing.hypercore.version_update_info:
@@ -21,7 +21,14 @@
       scale_computing.hypercore.cluster_info:
       register: cluster_initial
     
-    - name: Update hc version
+    - name: Get status of the latest update applied
+      scale_computing.hypercore.version_update_status_info:
+      register: update_status
+    - ansible.builtin.assert:
+        that:
+          - update_status.record.status == "COMPLETE" # Fail early if update in progress
+    
+    - name: Update to the same hc version
       scale_computing.hypercore.version_update:
         icos_version: "{{ cluster_initial.record.icos_version}}"
       register: update
@@ -43,10 +50,9 @@
           - update.diff.before.icos_version == cluster_initial.record.icos_version
           - update.diff.after.icos_version == updates.records[0].uuid
     
-    # - name: Get status of the latest update applied
-    #   scale_computing.hypercore.version_update_status_info:
-    #   register: update_status
-    # - ansible.builtin.assert:
-    #     that:
-    #       - update_status.record.status == "COMPLETE"
-    #       - update_status.record.to_version = updates.records[0].uuid
+    - name: Get status of the latest update applied
+      scale_computing.hypercore.version_update_status_info:
+      register: update_status
+    - ansible.builtin.assert:
+        that:
+          - update_status.record.status == "IN PROGRESS"
