--- a/tests/integration/targets/version_update_status_info/tasks/main.yml
+++ b/tests/integration/targets/version_update_status_info/tasks/main.yml
@@ -13,3 +13,5 @@
         that:
           - update_status.record != []
           - update_status.record.keys() | sort == ['from_build', 'percent', 'status', 'status_details', 'to_build', 'to_version']
+          - update_status.record.percent == "100"
+          - update_status.record.status == "COMPLETE"
