--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -108,6 +108,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        ansible: [2.13.0]
+        # python: [3.11]
         # test_name: [user_info]
         test_name: ${{ fromJson(needs.integ-matrix.outputs.matrix) }}
     steps:
@@ -117,9 +119,14 @@ jobs:
       - run: apt update
       - run: apt install -y git make
       - run: apt install -y genisoimage qemu-utils
-      - run: pip install ansible-core==2.13.1
+      - run: pip install ansible-core~=${{ matrix.ansible }}
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
+      # We have ansible.cfg "for testing" in git repo
+      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
+      # But it does affect ansible-galaxy and ansible-test commands.
+      - run: cd $WORKDIR && ansible-galaxy collection install community.crypto
+      - run: cd $WORKDIR && ansible-galaxy collection list
         # TODO - make integration_config.yml a reusable artifact/output of integration-prepare-env
       - run: |
           cd $WORKDIR
@@ -129,7 +136,7 @@ jobs:
           echo "smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}" >> tests/integration/integration_config.yml
           echo "sc_replication_dest_password: ${{ secrets.CI_CONFIG_HC_IP50_SC_REPLICATION_DEST_PASSWORD }}" >> tests/integration/integration_config.yml
           ls -al tests/integration/integration_config.yml
-      - run: cd $WORKDIR && ansible-test integration ${{ matrix.test_name }}
+      - run: cd $WORKDIR && ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
     needs:
