--- a/roles/cluster_config/tasks/main.yml
+++ b/roles/cluster_config/tasks/main.yml
@@ -19,14 +19,24 @@
     state: present
   when: scale_computing_hypercore_cluster_config.registration | default(False)
 
-- name: Set DNS configuration
+- name: Set DNS servers configuration
+  scale_computing.hypercore.dns_config:
+    dns_servers: "{{ scale_computing_hypercore_cluster_config.dns.server_ips | default(omit) }}"
+    state: set
+  when:
+    - scale_computing_hypercore_cluster_config.dns | default(False)
+    - '"server_ips" in scale_computing_hypercore_cluster_config.dns'
+    - scale_computing_hypercore_cluster_config.dns.server_ips is not none
+
+- name: Set DNS search_domains configuration
   scale_computing.hypercore.dns_config:
     dns_servers: "{{ scale_computing_hypercore_cluster_config.dns.server_ips | default(omit) }}"
     search_domains: "{{ scale_computing_hypercore_cluster_config.dns.search_domains | default(omit) }}"
     state: set
   when:
-    - '"dns" in scale_computing_hypercore_cluster_config and scale_computing_hypercore_cluster_config.dns'
-    - '"servers_ips" in scale_computing_hypercore_cluster_config.dns or "search_domains" in scale_computing_hypercore_cluster_config.dns'
+    - scale_computing_hypercore_cluster_config.dns | default(False)
+    - '"search_domains" in scale_computing_hypercore_cluster_config.dns'
+    - scale_computing_hypercore_cluster_config.dns.search_domains is not none
 
 - name: Set OIDC configuration
   scale_computing.hypercore.oidc_config:
@@ -58,7 +68,11 @@
   when: scale_computing_hypercore_cluster_config.smtp | default(False)
 
 - name: Reconfigure email alert recipients
-  when: '"email_alerts" in scale_computing_hypercore_cluster_config'
+  when:
+    - '"email_alerts" in scale_computing_hypercore_cluster_config'
+    - |
+      scale_computing_hypercore_cluster_config.email_alerts or
+      scale_computing_hypercore_cluster_config.email_alerts == []
   block:
     - name: Get old email alert recipients
       scale_computing.hypercore.email_alert_info:
@@ -77,12 +91,16 @@
       scale_computing.hypercore.email_alert:
         email: "{{ email_address }}"
         state: present
-      loop: "{{ scale_computing_hypercore_cluster_config.email_alerts }}"
+      loop: "{{ scale_computing_hypercore_cluster_config.email_alerts or [] }}"
       loop_control:
         loop_var: email_address
 
 - name: Reconfigure syslog servers
-  when: '"syslog_servers" in scale_computing_hypercore_cluster_config'
+  when:
+    - '"syslog_servers" in scale_computing_hypercore_cluster_config'
+    - |
+      scale_computing_hypercore_cluster_config.syslog_servers or
+      scale_computing_hypercore_cluster_config.syslog_servers == []
   block:
     - name: Get old syslog servers
       scale_computing.hypercore.syslog_server_info:
@@ -103,6 +121,6 @@
         port: "{{ syslog_server.port | default(omit) }}"
         protocol: "{{ syslog_server.protocol | default(omit) }}"
         state: present
-      loop: "{{ scale_computing_hypercore_cluster_config.syslog_servers }}"
+      loop: "{{ scale_computing_hypercore_cluster_config.syslog_servers or [] }}"
       loop_control:
         loop_var: syslog_server
