--- a/roles/version_update_single_node/tasks/update.yml
+++ b/roles/version_update_single_node/tasks/update.yml
@@ -1,48 +1,21 @@
 ---
-- name: Get all available running VMs
-  scale_computing.hypercore.vm_info:
-  register: vms
+# With future version_update module
+- name: Update HC3
+  block:
+    - name: Check progress
+      scale_computing.hypercore.version_update_status_info:
+      register: update_status
 
-# -------------SHUTDOWN-ALL-RUNNING------------------
+    - name: Update one
+      scale_computing.hypercore.version_update:
+      icos_version: "{{ item.uuid }}"
+      when: update_status != "COMPLETE"
 
-- name: Show all running VMs
-  ansible.builtin.debug:
-    msg: "{{ item.vm_name }}"
-  when: item.power_state == 'started'
-  loop: "{{ vms.records }}"
-  register: running_vms
-
-- name: Shutdown running VMs
-  scale_computing.hypercore.vm_params:
-    vm_name: "{{ item.vm_name }}"
-    power_state: stop
-  when: item.power_state == 'started'
-  loop: "{{ vms.records }}"
-  register: vm_shutdown_result
-
-- name: Show shutdown results
-  ansible.builtin.debug:
-    var: vm_shutdown_result
-
-# ---------------------UPDATE-----------------------
-
-# - name: Update HC3
-#   scale_computing.hypercore.api:
-#     action: post
-#     endpoint: "/rest/v1/Update/{{ item.uuid }}/apply"
-#   when: available_updates
-#   loop: "{{ available_updates.records }}"
-
-# -------------------RESTART-VMS--------------------
-
-- name: Start all VMs that were initially started
-  scale_computing.hypercore.vm_params:
-    vm_name: "{{ item.vm_name }}"
-    power_state: start
-  when: item.power_state == 'started'
-  loop: "{{ vms.records }}"
-  register: vm_start_result
-
-- name: Show restart results
-  ansible.builtin.debug:
-    var: vm_start_result
+    - name: Show update status
+      ansible.builtin.debub:
+        var: update_status
+  when: available_updates
+  always:
+  # loop: "{{ available_updates.records }}"
+  # TODO: Add progress check
+  # - wait for update to finish, then move on to next update
