--- a/tests/integration/targets/version_update_single_node_role/tasks/02_update_not_available.yml
+++ b/tests/integration/targets/version_update_single_node_role/tasks/02_update_not_available.yml
@@ -1,8 +1,6 @@
 ---
 - name: Get state before update
-  scale_computing.hypercore.api:
-    action: get
-    endpoint: /rest/v1/Update
+  scale_computing.hypercore.version_update_info:
   register: available_updates_before
 - ansible.builtin.debug:
     var: available_updates_before
@@ -22,9 +20,7 @@
 # --------------------------------------------------------------
 
 - name: Get state after update
-  scale_computing.hypercore.api:
-    action: get
-    endpoint: /rest/v1/Update
+  scale_computing.hypercore.version_update_info:
   register: available_updates_after
 - ansible.builtin.debug:
     var: available_updates_after
@@ -37,7 +33,7 @@
 
 # --------------------------------------------------------------
 
-- name: Assert that updates are still no available updates
+- name: Assert that updates are still not available
   ansible.builtin.assert:
     that:
       - available_updates_after == available_updates_before
