--- a/roles/version_update_single_node/tasks/main.yml
+++ b/roles/version_update_single_node/tasks/main.yml
@@ -23,13 +23,13 @@
   ansible.builtin.debug:
     var: node_info
 
-- name: Check if single-node system - end host if True
+- name: Check if single-node system - end host if False
   ansible.builtin.meta: end_host
   when: node_info.records | length > 1
 
 - name: Check if already on desired version - end host if True
   ansible.builtin.meta: end_host
-  when: cluster_info.record.icos_version == desired_version
+  when: cluster_info.record.icos_version == scale_computing_hypercore_desired_version
 
 - name: Check if desired version available
   scale_computing.hypercore.version_update_info:
@@ -43,21 +43,25 @@
   ansible.builtin.meta: end_host
   when: available_updates.records == []
 
+# ===================================================================
+
 - name: Update
   block:
     - name: Get all available running VMs
       scale_computing.hypercore.vm_info:
-      register: vms
+      register: vm_info
 
     - name: Shutdown all running VMs
       include_tasks: shutdown_vms.yml
+      vars:
+        vms: "{{ vm_info }}"
       when: vms.records != []
 
     # ----------------- UPDATE --------------------
 
     - name: Update single-node system
       scale_computing.hypercore.version_update:
-        icos_version: "{{ desired_version }}"
+        icos_version: "{{ scale_computing_hypercore_desired_version }}"
       register: update_result
 
     - name: Check update status
@@ -71,10 +75,12 @@
 
     - name: Restart previously running VMs
       include_tasks: restart_vms.yml
+      vars:
+        vms: "{{ vm_info }}"
       when: vms.records != []
 
     - name: Check if updating to desired version failed
       ansible.builtin.fail:
-        msg: Update to version "{{ desired_version }}" failed.
-      when: update_result.record.uuid != desired_version
-  when: update_status_before_update.record.update_status == "COMPLETED" or update_status_before_update_record.update_status != "IN PROGRESS"
+        msg: Update to version "{{ scale_computing_hypercore_desired_version }}" failed.
+      when: update_result.record.uuid != scale_computing_hypercore_desired_version
+  when: update_status_before_update.record.update_status == "COMPLETED" or update_status_before_update.record.update_status != "IN PROGRESS"
