--- a/tests/integration/targets/role_version_update_single_node/tasks/02_update_not_available.yml
+++ b/tests/integration/targets/role_version_update_single_node/tasks/02_update_not_available.yml
@@ -1,10 +1,4 @@
 ---
-- name: Get state before update
-  scale_computing.hypercore.version_update_info:
-  register: available_updates_before
-- ansible.builtin.debug:
-    var: available_updates_before
-
 - name: Get cluster HC3 API version before update
   scale_computing.hypercore.cluster_info:
   register: api_version_before
@@ -15,15 +9,11 @@
 
 - name: Run single-system update role - idempotence
   ansible.builtin.include_role:
-    name: version_update_single_node
+    name: scale_computing.hypercore.version_update_single_node
+  vars:
+    scale_computing_hypercore_desired_version: "{{ desired_version_apply }}"
 
 # --------------------------------------------------------------
-
-- name: Get state after update
-  scale_computing.hypercore.version_update_info:
-  register: available_updates_after
-- ansible.builtin.debug:
-    var: available_updates_after
 
 - name: Get cluster HC3 API version after update
   scale_computing.hypercore.cluster_info:
@@ -32,12 +22,6 @@
     var: api_version_after
 
 # --------------------------------------------------------------
-
-- name: Assert that updates are still not available
-  ansible.builtin.assert:
-    that:
-      - available_updates_after == available_updates_before
-      - available_updates_after == []
 
 - name: Assert that api_version_after == api_version_before
   ansible.builtin.assert:
