--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -36,12 +36,14 @@ jobs:
         uses: actions/checkout@v3
       - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
       - run: apt update
-      - run: apt install -y git make
+      - run: apt install -y git make rsync
         # ansible-test needs special directory structure.
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
         #
       - run: cd $WORKDIR && make docs
+        env:
+          ANSIBLE_COLLECTIONS_PATH: /work-dir
       - run: cd $WORKDIR && ls -al docs/build/html
 
   sanity-test:
