Run example in check_mode
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/version_update_single_node.yml
+++ b/examples/version_update_single_node.yml
@@ -3,6 +3,8 @@
   hosts: localhost
   connection: local
   gather_facts: false
+  # Comment out check_mode=true if you really want to start update.
+  check_mode: true
 
   vars:
     desired_version: 9.1.23.210897
